# embree-bazel-rules

./: .gitignore  BUILD.bazel  README.md
4.1.0/: BUILD.bazel
