cc_import(
    name = "embree-x86_64-linux",
    shared_library = "lib/x86_64/linux/libembree4.so.4",
)

cc_import(
    name = "embree-x86_64-macosx",
    shared_library = "lib/x86_64/macosx/libembree4.4.dylib",
)

cc_import(
    name = "embree-arm64-macosx",
    shared_library = "lib/arm64/macosx/libembree4.4.dylib",
)

cc_import(
    name = "embree-x64-windows",
    shared_library = "lib/x64/windows/embree4.dll",
)

cc_library(
    name = "embree",
    hdrs = glob(
        [
            "include/embree4/**",
        ],
    ),
    visibility = ["//visibility:public"],
    deps = select({
        "@bazel_tools//src/conditions:linux_x86_64": [":embree-x86_64-linux"],
        "@bazel_tools//src/conditions:darwin_x86_64": [":embree-x86_64-macosx"],
        "@bazel_tools//src/conditions:darwin_arm64": [":embree-arm64-macosx"],
        "@bazel_tools//src/conditions:windows_x64": [":embree-x64-windows"],
    }),
)
